ros2_taller3/log/build_2023-05-30_18-11-17/mi_robot_manipulador_3/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/robotica/Taller_3/ros2_taller3/install/mi_robot_manipulador_3/lib/python3.10/site-packages/mi_robot_manipulador_3/manipulador_interfaces.py", line 103
    global x, y
    ^^^^^^^^^^^
SyntaxError: name 'x' is used prior to global declaration

